Bug 91819 - Kmail's height cannot be reduced below a certain limit
Summary: Kmail's height cannot be reduced below a certain limit
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Mandrake RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2004-10-21 13:08 UTC by Shlomi Fish
Modified: 2008-11-09 15:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shlomi Fish 2004-10-21 13:08:58 UTC
Version:           1.7 (using KDE KDE 3.2.3)
Installed from:    Mandrake RPMs
OS:                Linux

Kmail's height cannot be reduced below a certain limit. This makes it difficult to view several Kmail windows' at once. This is despite the fact that there is plenty of room left until the toolbars.
Comment 1 Tom Albers 2004-10-26 22:04:30 UTC
Could you provide a screenshot of the minimum height so we can see why this is happening?
Comment 2 Shlomi Fish 2004-10-27 11:24:38 UTC
Sure, check:

http://www.shlomifish.org/bugs/kde-91819-kmail-max-height.png

For an image of the window's minimal height.
Comment 3 Shlomi Fish 2004-10-27 11:27:14 UTC
Hmmm... my mistake. The correct image with the minimal height is:

http://www.shlomifish.org/bugs/kde-91819-kmail-min-height.png

Regards,

      Shlomi Fish
Comment 4 Michael Leupold 2008-11-09 09:57:08 UTC
It's been a long time. I can't see any reason why one shouldn't be able to make it smaller, is there? Removing the code that sets the minimum size makes the window size be limited by the minimum widgets sizes. kmail can get really really small that way while still displaying fine.
Comment 5 Michael Leupold 2008-11-09 15:41:18 UTC
SVN commit 881999 by mleupold:

Don't set the minimum size as that's smaller than kmmainwin's and kontact's default size anyway. Voila, you can make kmail as small as you want now :)

BUG: 91819


 M  +0 -5      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=881999