Don't set the minimum size as that's smaller than kmmainwin's and kontact's default size anyway. Voila, you can make kmail as small as you want now :)

BUG: 91819

svn path=/trunk/KDE/kdepim/; revision=881999